css/style.css
/* ------------------------------
  GLOBAL
------------------------------ */
body {
  background-image: url("../images/striped_lens.png");
}
.container {
  margin-top: 200px;
}
.container p {
  font-size: 1.2em;
  text-shadow: 0 1px 0 #fff;
}
.clearfix:after {
  content: "";
  display: table;
  clear: both;
}


/* ------------------------------
  HEADER
------------------------------ */
nav {
  text-align: center;
}
.top-bar {
  position: fixed;
  top: 0;
  height: auto;
  background: #ccc;
  z-index: 100;
  -webkit-box-shadow:  0px 1px 10px 1px #666;      
  box-shadow:  0px 1px 10px 1px #666;
}
.top-bar ul {
  display: inline-block;
  margin-bottom: 0;
}
.top-bar ul > li:hover, .top-bar ul > li.active {
  background: none;
}
.top-bar ul > li:hover a, .top-bar ul > li.active a {
  color: #fff;
}
header h1 {
  text-align: center;
  margin-top: 9px;
  margin-bottom: 0;
  font-family: 'Rokkitt', serif;
  font-size: 5em;
  text-shadow: 0 1px 0 #fff;
}
header h1 a,
header h1 a:hover {
  color: #222;
}
header li {
  display: inline;
  margin: 0 5px;
  list-style-type: none;
}
header li:hover {
  color: #fff !important;
}
header li a.button {
  color: #fff;
  background: #00B7E0;
  text-shadow: 0 -1px 0 #0085A3;
  border: none;
  box-shadow: none;
  -webkit-box-shadow: none;
}
header li a.button:hover {
  background-color: #00C8F5;
  color: #fff;
}


/* -----------------------
  GROUPS
----------------------- */
.groups-member {
  margin-bottom: 30px;
}
.groups-member h2 {
  font-family: 'Rokkitt', serif;
  border-bottom: 2px solid #00C8F5;  
}
.groups-member a {
  float: left;
  width: 30%;
  margin-right: 10px;
  padding: 10px;
  background: #fff;
  -webkit-box-shadow: inset 1px 1px 1px 1px #aaa;
  box-shadow: inset 1px 1px 1px 1px #aaa;
  border-radius: 4px;
  -webkit-border-radius: 4px;
}
.groups-member p {
  margin: 0;
  padding: 0;
}


/* ------------------------------
  EVENTS
------------------------------ */
/*
#calendar {
  left: 25%;
  position: absolute; 
  top: 20%;
  width: 50%;
}
#calendar ul {
  list-style: none outside none;
  padding: 0em;
}
#calendar li {
  padding-top: 0.3em;
  padding-bottom: 0.3em;
}
#calendar .event_title {
  width: 100%;
  float: right;
  padding-top: 0.3em;
  padding-bottom: 0.3em;
  border-bottom: 1px dotted #A4A4A4;
}
#calendar .event_meta {
  width: 24%;
  float: right;
}
#calendar .event_content {
  width: 75%;
  float: left;
  border-right: 1px dotted #A4A4A4;
  padding-bottom: 3em;
  padding-right: 0.3em;
}
*/


#calendar .event_title a {
  font-family: 'Rokkitt', serif;
  border-bottom: 2px solid #00C8F5;
  font-size: 2.5em;
  color: #222;
  font-weight: bold;
}
.event_line {
  display: inline-block;
  width: 100%;
  margin-bottom: 40px;
}
.event_list,
.meta_list {
  width: 70%;
  padding-left: 20px;
  border-left: 1px dashed #ccc;
  margin-top: 10px;
}
.event_list {
  margin-top: 0;
}
.event_list li {
  font-size: 1.2em;
  text-shadow: 0 1px 0 #fff;
  list-style-type: none;
}
.event-info-item {
  color: #888;
  font-family: 'Rokkitt', serif;
  font-size: 1.3em;
  text-transform: uppercase;
  font-weight: bold;
  text-shadow: 0 1px 0 #fff;

}
.dateTime,
.RSVP,
.fee {
  font-size: 1.2em;
  list-style-type: none;
}
.RSVP a {
  color: #222;
}


/* ------------------------------
  WORK WITH
------------------------------ */
.work-with {
  text-align: center;
}
.work-with li {
  display: inline-block;
  height: 130px;
  width: 130px;
  margin: 0 10px;
  text-align: center;
  list-style-type: none;
  background: #fff url("images/noise.png");
  -webkit-box-shadow: inset 1px 1px 1px 1px #aaa;
  box-shadow: inset 1px 1px 1px 1px #aaa;
  border-radius: 150px;
  -webkit-border-radius: 150px;
}
.work-with a:hover li {
  background-color: #00B7E0;
  box-shadow: none;
  -webkit-box-shadow: none;
}
.work-with a:hover h3 {
  color: #fff;
  text-shadow: 0 -1px 0 #0085A3;
}
.work-with h3 {
  display: inline-block;
  font-size: 1.5em;
  font-family: 'Rokkitt', serif;
}
.work-with img {
  display: inline-block;
  margin-top: 30px;
  height: 30px;
  vertical-align: middle;
  text-align: center;
}
.work-with-headers {
  margin-top: 200px;
}
.work-with-headers span {
  display: block;
  border-top: 3px dashed #ccc;
}
.work-with-headers h1 {
  position: relative;
  font-size: 4.5em;
  top: -39px;
  width: 33%;
  margin: 0 auto;
  padding: 0 20px;
  text-align: center;
  color: #999;
  font-family: 'Rokkitt', serif;
  background-image: url("../images/striped_lens.png");
  text-shadow: 0 1px 0 #fff;
}
.work-with-headers.two-lines h1 {
    top: -74px;
}


/* ------------------------------
  FOOTER
------------------------------ */
footer {
  margin-top: 100px;
  padding: 30px;
  background: #ccc;
  text-align: center;
  -webkit-box-shadow:  0px -1px 10px 1px #666;      
  box-shadow:  0px -1px 10px 1px #666;
  font-family: 'Rokkitt', serif;
}
footer ul {
  margin-left: 0;
  margin-bottom: 20px;
}
footer li {
  list-style-type: none;
  display: inline;
  margin: 0 10px;
  font-weight: bold;
  font-size: 1.3em;
  color: #666;
  text-shadow: 0 1px 0 #eee;
}
footer a {
  color: #666;
}
footer p {
  margin-bottom: 0;
  color: #666;
  text-shadow: 0 1px 0 #eee;
  font-size: 1.1em;
  font-family: 'Rokkitt', serif;
}
.footer-logos {
  margin: 0 auto 25px;
  width: 564px;
  background: #fff;
  -webkit-box-shadow: inset 1px 1px 1px 1px #aaa;
  box-shadow: inset 1px 1px 1px 1px #aaa;
  border-radius: 4px;
  -webkit-border-radius: 4px;
}
.footer-logos p {
  display: inline-block;
  margin-left: 20px;
  color: #ccc;
  font-weight: bold;
  font-family: 'Rokkitt', serif;
  font-size: 2em;
  vertical-align: middle;
}
.footer-logos img {
  display: inline-block;
  margin: 10px 10px 10px 20px;
  vertical-align: middle;
}
img.logo-ploonky {
  height: 75px;
}
img.logo-320ny {
  height: 50px;
}

